[project]
name = "comfyui-catvton"
description = "Comfyui-CatVTON This repository is the modified official Comfyui node of CatVTON, which is a simple and efficient virtual try-on diffusion model with 1) Lightweight Network (899.06M parameters totally), 2) Parameter-Efficient Training (49.57M parameters trainable) 3) Simplified Inference (< 8G VRAM for 1024X768 resolution).\nThe original GitHub project is [a/https://github.com/Zheng-Chong/CatVTON](https://github.com/Zheng-Chong/CatVTON)"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["accelerate>=0.30.0", "black", "cloudpickle", "diffusers>=0.26.3", "future", "fvcore", "huggingface_hub", "hydra-core", "iopath", "matplotlib<=3.9.1", "numpy>=1.24.4", "omegaconf", "opencv_python", "pillow>=10.3.0", "pycocotools", "pydot", "PyYAML==6.0.1", "scipy<=1.13.1", "setuptools", "scikit-image<=0.24.0", "tabulate", "tensorboard", "termcolor", "tqdm<=4.66.4", "transformers>=4.27.3", "xformers>=0.0.23.post1", "yacs", "Ninja==1.11.1.1", "git+https://github.com/facebookresearch/detectron2.git@v0.6", "git+https://github.com/facebookresearch/detectron2.git@v0.6#subdirectory=projects/DensePose"]

[project.urls]
Repository = "https://github.com/pzc163/Comfyui-CatVTON"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pzc163"
DisplayName = "Comfyui-CatVTON"
Icon = ""

